feat(notification): add notification table and endpoints / add notification bell component
